# term-fz

./: Cargo.toml
src/: main.rs
src/api/: mod.rs  requests.rs  structs.rs
