[package]
name = "termdl"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
crossterm = "0.28.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
